  Back on video also goes back a window - see what I can do (and see if other controls are affected)
  Fix it so that the progress does not pop up twice when starting FB
  Add image info to slideout on Video skin for full message view
  Finish no window stacking mode
  Implement get_participated_forum, get_board_stat
  Smilies on other keyboards
  
 Long Term:
  Check on optional import behavior
  Check for new parser rules automatically or add option to check for new rules
  Image zoom/rotate etc
  Look at using the AlarmClock builtin for the service - Easier to restart and less overall memory usage perhaps?
  When adding a forum, ask for logo background color (or image?) or ask later
  Option to save posts when exiting and not posting
  Use new option menus for context?
  Adjustable text size
  Logo url from field in forum config data?
  Add missing smilies other forum types
  Add missing quote formats for other forum systems
  Tapatalk: Use charset from get_config
  Find forum mobiquo.php path from tapatalk.js path in html page
  Latest Threads
  Today's New Posts?
  Make a million dollars
  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (e.g. followers) - TTv4

KNOWN ISSUES:
  Corrupted color display on longer posts. XBMC bug as of Frodo 12.1
  
Current Version : 2.1.2

*** 2.1.2 ***

Added an detail display on the image slide out on the full message view of the Video skin
Made the links slide out on the full message view taller on the Video skin
Fixed the numbers for post images for counts over 20 when the skin mods are enabled
Modified font to include more circled numbers for the post image representations
Added 'Video' keyboard with smilies (Fits under video when playing)
Tapatalk: Added ability to use forum specific smilies when available